--- a/proyecto/Views/Shared/_Layout.cshtml
+++ b/proyecto/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Alpha Systems S.R.L. &copy; v2.1.0</p>
+            <p>&copy; @DateTime.Now.Year - Alpha Systems S.R.L. &copy; WebService v2.1.1</p>
         </footer>
     </div>
 
